// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCallItem component TableCallItem with one props 1`] = `
<div
  className="calls-list__item calls-list__item"
>
  <div
    className="calls-list__col name-col"
  >
    Петя
  </div>
  <div
    className="calls-list__col phone-col"
  >
    056-34-45-111
  </div>
  <div
    className="calls-list__col time-col"
    data-milisec={1641273300511}
  >
    07:15
  </div>
  <div
    className="calls-list__col time-delete"
  >
    <span
      onClick={[Function]}
    >
      delete
    </span>
  </div>
  <div
    className="calls-list__col time-finish"
  >
    <input
      checked={false}
      disabled={true}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`TableCallItem component TableCallItem with props 1`] = `
<div
  className="calls-list__item calls-list__item"
>
  <div
    className="calls-list__col name-col"
  >
    Петя
  </div>
  <div
    className="calls-list__col phone-col"
  >
    056-34-45-111
  </div>
  <div
    className="calls-list__col time-col"
    data-milisec={1641273300511}
  >
    07:15
  </div>
  <div
    className="calls-list__col time-delete"
  >
    <span
      onClick={[Function]}
    >
      delete
    </span>
  </div>
  <div
    className="calls-list__col time-finish"
  >
    <input
      checked={false}
      disabled={true}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`TableCallItem component TableCallItem with three props hidden all and remove func 1`] = `
<div
  className="calls-list__item "
>
  <div
    className="calls-list__col name-col"
  >
    Петя
  </div>
  <div
    className="calls-list__col phone-col"
  >
    056-34-45-111
  </div>
  <div
    className="calls-list__col time-col"
    data-milisec={1641273300511}
  >
    07:15
  </div>
  <div
    className="calls-list__col time-delete"
  >
    <span
      onClick={[Function]}
    >
      delete
    </span>
  </div>
  <div
    className="calls-list__col time-finish"
  >
    <input
      checked={true}
      disabled={true}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`TableCallItem component TableCallItem with two props 1`] = `
<div
  className="calls-list__item "
>
  <div
    className="calls-list__col name-col"
  >
    Петя
  </div>
  <div
    className="calls-list__col phone-col"
  >
    056-34-45-111
  </div>
  <div
    className="calls-list__col time-col"
    data-milisec={1641273300511}
  >
    07:15
  </div>
  <div
    className="calls-list__col time-delete"
  >
    <span
      onClick={[Function]}
    >
      delete
    </span>
  </div>
  <div
    className="calls-list__col time-finish"
  >
    <input
      checked={true}
      disabled={true}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`TableCallItem component TableCallItem with two props hidden all 1`] = `
<div
  className="calls-list__item calls-list__item"
>
  <div
    className="calls-list__col name-col"
  >
    Петя
  </div>
  <div
    className="calls-list__col phone-col"
  >
    056-34-45-111
  </div>
  <div
    className="calls-list__col time-col"
    data-milisec={1641273300511}
  >
    07:15
  </div>
  <div
    className="calls-list__col time-delete"
  >
    <span
      onClick={[Function]}
    >
      delete
    </span>
  </div>
  <div
    className="calls-list__col time-finish"
  >
    <input
      checked={false}
      disabled={true}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`TableCallItem component TableCallItem with two props hidden finished 1`] = `
<div
  className="calls-list__item calls-list__item"
>
  <div
    className="calls-list__col name-col"
  >
    Петя
  </div>
  <div
    className="calls-list__col phone-col"
  >
    056-34-45-111
  </div>
  <div
    className="calls-list__col time-col"
    data-milisec={1641273300511}
  >
    07:15
  </div>
  <div
    className="calls-list__col time-delete"
  >
    <span
      onClick={[Function]}
    >
      delete
    </span>
  </div>
  <div
    className="calls-list__col time-finish"
  >
    <input
      checked={false}
      disabled={true}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`TableCallItem component TableCallItem with two props hidden next 1`] = `
<div
  className="calls-list__item "
>
  <div
    className="calls-list__col name-col"
  >
    Петя
  </div>
  <div
    className="calls-list__col phone-col"
  >
    056-34-45-111
  </div>
  <div
    className="calls-list__col time-col"
    data-milisec={1641273300511}
  >
    07:15
  </div>
  <div
    className="calls-list__col time-delete"
  >
    <span
      onClick={[Function]}
    >
      delete
    </span>
  </div>
  <div
    className="calls-list__col time-finish"
  >
    <input
      checked={true}
      disabled={true}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`TableCallItem component TableCallItem without props 1`] = `null`;
